fixes multiple css issues and handles jumping to searchView by default

--- a/src/components/searchView/searchView.css
+++ b/src/components/searchView/searchView.css
@@ -622,4 +622,5 @@ h5.add-subject__modal--label,
 
 .worklist-page {
   margin-right: 10px;
+  color: white;
 }
